--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-mlflow==2.12.1
-scikit-learn>=1.2
-pandas
-numpy
-xgboost
-catboost
-imbalanced-learn
-ucimlrepo
-fastapi
-uvicorn[standard]
-gunicorn
+fastapi==0.95.2
+uvicorn==0.22.0
+scikit-learn==1.4.2
+pandas==2.2.2
+numpy==1.26.4
+joblib==1.3.2
+imbalanced-learn==0.12.2
+ucimlrepo==0.0.6
+xgboost==2.0.3
+catboost==1.2.3
+
